# transcribe_diarize

./: .env.example  .gitignore  LICENSE  README.md  install.sh  prompt_summarize.txt  pyproject.toml  transcribe_diarize.py
transcribe_diarize_pkg/: __init__.py  cli.py  prompt_summarize.txt
